--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,6 @@
     "ect": "^0.5.9",
     "express": "^4.16.3",
     "path": "^0.12.7",
-    "socket.io": "^2.0.4",
-    "ws": "^5.0.0"
+    "socket.io": "^2.0.4"
   }
 }
